# py-bus

./: .coverage  .gitignore  .pre-commit-config.yaml  docker-compose.yaml  main.py  pyproject.toml
src/: exceptions.py  main.py
src/handlers/: print_something.py  send_email.py
src/models/: Event.py  Handler.py  Publication.py
src/py_bus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/repositories/: InMemoryRepository.py  SQLiteRepository.py
src/services/: BusService.py
src/services/tests/: test_bus.py
src/tests/integration/: test_repository.py
src/tests/unit/: test_event.py  test_handler.py  test_service.py
