[project]
name = "py-bus"
version = "0.1.0"
description = "Educational event bus project"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = []

[tool.pytest]
minversion = "9.0.2"
addopts = ["-ra", "-q"]
testpaths = [
    "src"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pre-commit>=2.0.0",
    "ruff>=0.15.7",
]
