[project]
name = "py-bus"
version = "0.1.0"
description = "Educational event bus project"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["src/"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "9.0.2"
addopts = ["-ra", "-q", "--cov=src", "--cov-report=term-missing"]
testpaths = ["src"]
pythonpath = ["src"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 79

[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pre-commit>=2.0.0",
    "ruff>=0.15.7",
    "pytest-cov>=7.0.0",
]
