[project]
name = "py-bus"
version = "0.1.0"
description = "Educational event bus project"
readme = "README.md"
requires-python = ">=3.12.13"
dependencies = [
    "typer>=0.24.1",
]

[project.scripts]
pybus = "main:app"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "9.0.2"
addopts = ["-ra", "-q", "--cov=src", "--cov-report=term-missing"]
testpaths = ["src"]
pythonpath = ["src"]

[tool.coverage.run]
omit = ["src/handlers/*"]

[tool.ruff]
line-length = 100

[tool.pyright]
pythonVersion = "3.12"
include = ["src"]


[dependency-groups]
dev = [
    "mypy>=1.0.0",
    "pytest>=7.0.0",
    "pytest-cov>=7.0.0",
    "pre-commit>=2.0.0",
    "ruff>=0.15.7",
]
